# cognitive-memory-benchmarks

./: .gitignore  README.md  check_status.py  experimentlog.md  experimentlog_v2.md  metrics.py  pyproject.toml
analysis/: ablation_runner.py  efficiency_table.py  judge_reliability.py  utilization_probe.py
docs/: README.md  architecture.md  benchmarks-overview.md  lessons-and-gotchas.md  lti-bench.md  next-steps.md  paper.md  repo-layout.md  sdk-internals.md
docs/context/: reviewer-feedback-memory-lifecycle.md  talk-paper-origin-and-positioning.md  v6-paper-review-and-competitors.md
docs/milestones/: campaign-summary-2026-05.md  phase-0-harness-extension.md  phase-1-sensitivity-analysis.md  phase-2-optuna-tuning.md  phase-4-locomo-reality-check.md  phase-5-full-locomo.md  phase-7-longmemeval-validation.md  phase-8-decay-floor-ablation.md
locomo/: README.md  efficiency_table.py  evidence_recall.py  feature_activation.py  judge_reliability.py  locomo_eval.py  oracle_ceiling.py  tuning.md
locomo/data/: mem0_custom_instructions.txt
locomo/results/: run_hybrid_conv0.json  run_hybrid_full.json
longmemeval/: README.md  run_longmemeval.py
lti/: lti_bench.py
lti/results/: v6_run_l.json  (+1 more)
memorybench/: README.md  SETUP.md  run_memorybench.py  solver.py
paper/: arxiv-metadata.md  deep-recall-docs.md  paper-update-plan.md  paper.blg  paper.tex  references.bib
shared/: adapter.py  memory_adapter.py  metrics.py  trial_config.py
simulations/: cold_storage_sim.py  decay_comparison.json  decay_comparison.py  monte_carlo.py  simulate_boosting.py
tuning/: README.md
(+497 files in other folders)
