[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory-benchmarks"
version = "0.1.0"
description = "Benchmark suite for cognitive-memory: LoCoMo, MemoryBench, LongMemEval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bhekani Khumalo" },
]
dependencies = [
    "cognitive-memory>=0.1.0",
    "numpy>=1.24",
    "openai>=1.0",
    "nltk>=3.8",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
tuning = [
    "optuna>=3.5",
]

[project.urls]
Homepage = "https://github.com/bhekanik/cognitive-memory-benchmarks"
Repository = "https://github.com/bhekanik/cognitive-memory-benchmarks"
SDK = "https://github.com/bhekanik/cognitive-memory-py"

[project.scripts]
locomo-eval = "locomo.locomo_eval:main"
lti-bench = "lti.lti_bench:main"

[tool.hatch.build.targets.wheel]
packages = ["shared", "locomo", "lti", "memorybench", "longmemeval"]

[tool.ruff]
target-version = "py310"
line-length = 120
